Merge v7.2.2 from upstream.