@@ -2,7 +2,7 @@
  * ProGuard -- shrinking, optimization, obfuscation, and preverification
  *             of Java bytecode.
  *
- * Copyright (c) 2002-2019 Guardsquare NV
+ * Copyright (c) 2002-2022 Guardsquare NV
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the Free
@@ -20,6 +20,11 @@
  */
 package proguard.gui;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.core.LoggerContext;
+import org.apache.logging.log4j.core.appender.OutputStreamAppender;
+import org.apache.logging.log4j.core.config.LoggerConfig;
+import org.apache.logging.log4j.core.layout.PatternLayout;
 import proguard.*;
 import proguard.classfile.util.ClassUtil;
 import proguard.gui.splash.*;
@@ -33,6 +38,7 @@ import java.io.*;
 import java.net.*;
 import java.util.*;
 import java.util.List;
+import java.util.prefs.Preferences;
 
 
 /**
@@ -48,15 +54,18 @@ public class ProGuardGUI extends JFrame
     private static final String BOILERPLATE_CONFIGURATION = "boilerplate.pro";
     private static final String DEFAULT_CONFIGURATION     = "default.pro";
 
-    private static final String OPTIMIZATIONS_DEFAULT                     = "*";
-    private static final String KEEP_ATTRIBUTE_DEFAULT                    = "Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,LocalVariable*Table,*Annotation*,Synthetic,EnclosingMethod";
-    private static final String SOURCE_FILE_ATTRIBUTE_DEFAULT             = "SourceFile";
-    private static final String ADAPT_RESOURCE_FILE_NAMES_DEFAULT         = "**.properties";
-    private static final String ADAPT_RESOURCE_FILE_CONTENTS_DEFAULT      = "**.properties,META-INF/MANIFEST.MF";
+    private static final String OPTIMIZATIONS_DEFAULT                = "*";
+    private static final String KEEP_ATTRIBUTE_DEFAULT               = "Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,LocalVariable*Table,*Annotation*,Synthetic,EnclosingMethod";
+    private static final String SOURCE_FILE_ATTRIBUTE_DEFAULT        = "SourceFile";
+    private static final String ADAPT_RESOURCE_FILE_NAMES_DEFAULT    = "**.properties";
+    private static final String ADAPT_RESOURCE_FILE_CONTENTS_DEFAULT = "**.properties,META-INF/MANIFEST.MF";
+    private static final String ELLIPSIS_DOTS                        = "...";
 
     private static final Border BORDER = BorderFactory.createEtchedBorder(EtchedBorder.RAISED);
 
     static boolean systemOutRedirected;
+
+    private static final Preferences PREFS = Preferences.userRoot().node(ProGuardGUI.class.getName());
 
     private final JFileChooser configurationChooser = new JFileChooser("");
     private final JFileChooser fileChooser          = new JFileChooser("");
@@ -163,6 +172,7 @@ public class ProGuardGUI extends JFrame
     private final JTextArea  stackTraceTextArea      = new JTextArea(3, 40);
     private final JTextArea  reTraceTextArea         = new JTextArea(msg("reTraceInfo"), 3, 40);
 
+
     /**
      * Creates a new ProGuardGUI.
      */
@@ -224,6 +234,13 @@ public class ProGuardGUI extends JFrame
         stretchPanelConstraints.weighty   = 1.0;
         stretchPanelConstraints.anchor    = GridBagConstraints.NORTHWEST;
         stretchPanelConstraints.insets    = constraints.insets;
+
+        GridBagConstraints containerConstraints = new GridBagConstraints();
+        containerConstraints.gridwidth = GridBagConstraints.REMAINDER;
+        containerConstraints.fill      = GridBagConstraints.BOTH;
+        containerConstraints.weightx   = 1.0;
+        containerConstraints.weighty   = 1.0;
+        containerConstraints.anchor    = GridBagConstraints.NORTHWEST;
 
         GridBagConstraints glueConstraints = new GridBagConstraints();
         glueConstraints.fill    = GridBagConstraints.BOTH;
@@ -334,9 +351,6 @@ public class ProGuardGUI extends JFrame
         loadBoilerplateConfiguration();
 
         // Create the boiler plate keep panels.
-	    JCheckBox previousBox     = null;
-	    JTextField previousField  = new JTextField(40);
-
         boilerplateKeepCheckBoxes = new JCheckBox[boilerplateKeep.length];
         boilerplateKeepTextFields = new JTextField[boilerplateKeep.length];
 
@@ -352,22 +366,15 @@ public class ProGuardGUI extends JFrame
         shrinkingOptionsPanel.add(tip(printUsageBrowseButton, "selectUsageFile"), constraintsLast);
 
         JPanel shrinkingPanel = new JPanel(layout);
+
         shrinkingPanel.add(shrinkingOptionsPanel, panelConstraints);
         addClassSpecifications(extractClassSpecifications(boilerplateKeep),
-                               shrinkingPanel,
                                boilerplateKeepCheckBoxes,
                                boilerplateKeepTextFields,
-			                   previousBox,
-			                   previousField);
+                               shrinkingPanel);
 
         addBorder(additionalKeepPanel, "keepAdditional");
         shrinkingPanel.add(tip(additionalKeepPanel, "keepAdditionalTip"), stretchPanelConstraints);
-
-        JScrollPane shrinkingScroll = new JScrollPane(shrinkingPanel);
-        shrinkingScroll.setBorder(BorderFactory.createEmptyBorder());
-
-        JPanel totalShrinkingPanel = new JPanel(layout);
-        totalShrinkingPanel.add(shrinkingScroll, stretchPanelConstraints);
 
         // Create the boiler plate keep names panels.
         boilerplateKeepNamesCheckBoxes = new JCheckBox[boilerplateKeepNames.length];
@@ -425,22 +432,15 @@ public class ProGuardGUI extends JFrame
         obfuscationOptionsPanel.add(tip(adaptResourceFileContentsTextField,      "fileNameFilterTip"),                constraintsLastStretch);
 
         JPanel obfuscationPanel = new JPanel(layout);
+
         obfuscationPanel.add(obfuscationOptionsPanel, panelConstraints);
         addClassSpecifications(extractClassSpecifications(boilerplateKeepNames),
-                               obfuscationPanel,
                                boilerplateKeepNamesCheckBoxes,
                                boilerplateKeepNamesTextFields,
-			                   previousBox,
-			                   previousField);
+                               obfuscationPanel);
 
         addBorder(additionalKeepNamesPanel, "keepNamesAdditional");
         obfuscationPanel.add(tip(additionalKeepNamesPanel, "keepNamesAdditionalTip"), stretchPanelConstraints);
-
-        JScrollPane obfuscationScroll = new JScrollPane(obfuscationPanel);
-        obfuscationScroll.setBorder(BorderFactory.createEmptyBorder());
-
-        JPanel totalObfuscationPanel = new JPanel(layout);
-        totalObfuscationPanel.add(obfuscationScroll, stretchPanelConstraints);
 
         // Create the boiler plate "no side effect methods" panels.
         boilerplateNoSideEffectMethodCheckBoxes = new JCheckBox[boilerplateNoSideEffectMethods.length];
@@ -461,13 +461,12 @@ public class ProGuardGUI extends JFrame
         optimizationOptionsPanel.add(tip(optimizationPassesSpinner,           "optimizationPassesTip"),          constraintsLast);
 
         JPanel optimizationPanel = new JPanel(layout);
+
         optimizationPanel.add(optimizationOptionsPanel, panelConstraints);
         addClassSpecifications(boilerplateNoSideEffectMethods,
-                               optimizationPanel,
                                boilerplateNoSideEffectMethodCheckBoxes,
                                null,
-                               previousBox,
-			                   previousField);
+                               optimizationPanel);
 
         addBorder(additionalNoSideEffectsPanel, "assumeNoSideEffectsAdditional");
         optimizationPanel.add(tip(additionalNoSideEffectsPanel, "assumeNoSideEffectsAdditionalTip"), stretchPanelConstraints);
@@ -486,7 +485,7 @@ public class ProGuardGUI extends JFrame
             createBrowseButton(printSeedsTextField, msg("selectSeedsFile"));
 
         JButton printConfigurationBrowseButton =
-            createBrowseButton(printConfigurationTextField, msg("selectConfigurationFile"));
+            createBrowseButton(printConfigurationTextField, msg( "selectConfigurationFile"));
 
         JButton dumpBrowseButton =
             createBrowseButton(dumpTextField, msg("selectDumpFile"));
@@ -542,6 +541,9 @@ public class ProGuardGUI extends JFrame
         consoleTextArea.setEditable(false);
         consoleTextArea.setLineWrap(false);
         consoleTextArea.setWrapStyleWord(false);
+
+        createLogAppender(consoleTextArea);
+
         JScrollPane consoleScrollPane = new JScrollPane(consoleTextArea);
         consoleScrollPane.setBorder(new EmptyBorder(1, 1, 1, 1));
         addBorder(consoleScrollPane, "processingConsole");
@@ -604,12 +606,27 @@ public class ProGuardGUI extends JFrame
         JButton reTraceButton = new JButton(msg("reTrace"));
         reTraceButton.addActionListener(new MyReTraceActionListener());
 
+        // Make the shrinking panel so far scrollable.
+        JPanel scrollableShrinkingPanel = shrinkingPanel;
+        shrinkingPanel = new JPanel(layout);
+        shrinkingPanel.add(new JScrollPane(scrollableShrinkingPanel), containerConstraints);
+
+        // Make the obfuscation panel so far scrollable.
+        JPanel scrollableObfuscationPanel = obfuscationPanel;
+        obfuscationPanel = new JPanel(layout);
+        obfuscationPanel.add(new JScrollPane(scrollableObfuscationPanel), containerConstraints);
+
+        // Make the optimization panel so far scrollable.
+        JPanel scrollableOptimizationPanel = optimizationPanel;
+        optimizationPanel = new JPanel(layout);
+        optimizationPanel.add(new JScrollPane(scrollableOptimizationPanel), containerConstraints);
+
         // Create the main tabbed pane.
         TabbedPane tabs = new TabbedPane();
         tabs.add(msg("proGuardTab"),     proGuardPanel);
         tabs.add(msg("inputOutputTab"),  inputOutputPanel);
-        tabs.add(msg("shrinkingTab"),    totalShrinkingPanel);//scroll); //shrinkingPanel);
-        tabs.add(msg("obfuscationTab"),  totalObfuscationPanel);//obfuscationPanel);
+        tabs.add(msg("shrinkingTab"),    shrinkingPanel);
+        tabs.add(msg("obfuscationTab"),  obfuscationPanel);
         tabs.add(msg("optimizationTab"), optimizationPanel);
         tabs.add(msg("informationTab"),  optionsPanel);
         tabs.add(msg("processTab"),      processPanel);
@@ -618,39 +635,39 @@ public class ProGuardGUI extends JFrame
             this.getClass().getResource(TITLE_IMAGE_FILE)));
 
         // Add the bottom buttons to each panel.
-        proGuardPanel        .add(Box.createGlue(),                                      glueConstraints);
-        proGuardPanel        .add(tip(loadButton,             "loadConfigurationTip"),   bottomButtonConstraints);
-        proGuardPanel        .add(createNextButton(tabs),                                lastBottomButtonConstraints);
+        proGuardPanel    .add(Box.createGlue(),                                    glueConstraints);
+        proGuardPanel    .add(tip(loadButton,             "loadConfigurationTip"), bottomButtonConstraints);
+        proGuardPanel    .add(createNextButton(tabs),                              lastBottomButtonConstraints);
 
-        inputOutputPanel     .add(Box.createGlue(),           glueConstraints);
-        inputOutputPanel     .add(createPreviousButton(tabs), bottomButtonConstraints);
-        inputOutputPanel     .add(createNextButton(tabs),     lastBottomButtonConstraints);
+        inputOutputPanel .add(Box.createGlue(),           glueConstraints);
+        inputOutputPanel .add(createPreviousButton(tabs), bottomButtonConstraints);
+        inputOutputPanel .add(createNextButton(tabs),     lastBottomButtonConstraints);
 
-        totalShrinkingPanel  .add(Box.createGlue(),           glueConstraints);
-        totalShrinkingPanel  .add(createPreviousButton(tabs), bottomButtonConstraints);
-        totalShrinkingPanel  .add(createNextButton(tabs),     lastBottomButtonConstraints);
+        shrinkingPanel   .add(Box.createGlue(),           glueConstraints);
+        shrinkingPanel   .add(createPreviousButton(tabs), bottomButtonConstraints);
+        shrinkingPanel   .add(createNextButton(tabs),     lastBottomButtonConstraints);
 
-        totalObfuscationPanel.add(Box.createGlue(),           glueConstraints);
-        totalObfuscationPanel.add(createPreviousButton(tabs), bottomButtonConstraints);
-        totalObfuscationPanel.add(createNextButton(tabs),     lastBottomButtonConstraints);
+        obfuscationPanel .add(Box.createGlue(),           glueConstraints);
+        obfuscationPanel .add(createPreviousButton(tabs), bottomButtonConstraints);
+        obfuscationPanel .add(createNextButton(tabs),     lastBottomButtonConstraints);
 
-        optimizationPanel    .add(Box.createGlue(),           glueConstraints);
-        optimizationPanel    .add(createPreviousButton(tabs), bottomButtonConstraints);
-        optimizationPanel    .add(createNextButton(tabs),     lastBottomButtonConstraints);
+        optimizationPanel.add(Box.createGlue(),           glueConstraints);
+        optimizationPanel.add(createPreviousButton(tabs), bottomButtonConstraints);
+        optimizationPanel.add(createNextButton(tabs),     lastBottomButtonConstraints);
 
-        optionsPanel         .add(Box.createGlue(),           glueConstraints);
-        optionsPanel         .add(createPreviousButton(tabs), bottomButtonConstraints);
-        optionsPanel         .add(createNextButton(tabs),     lastBottomButtonConstraints);
+        optionsPanel     .add(Box.createGlue(),           glueConstraints);
+        optionsPanel     .add(createPreviousButton(tabs), bottomButtonConstraints);
+        optionsPanel     .add(createNextButton(tabs),     lastBottomButtonConstraints);
 
-        processPanel         .add(Box.createGlue(),                                      glueConstraints);
-        processPanel         .add(createPreviousButton(tabs),                            bottomButtonConstraints);
-        processPanel         .add(tip(viewButton,             "viewConfigurationTip"),   bottomButtonConstraints);
-        processPanel         .add(tip(saveButton,             "saveConfigurationTip"),   bottomButtonConstraints);
-        processPanel         .add(tip(processButton,          "processTip"),             lastBottomButtonConstraints);
+        processPanel     .add(Box.createGlue(),                                    glueConstraints);
+        processPanel     .add(createPreviousButton(tabs),                          bottomButtonConstraints);
+        processPanel     .add(tip(viewButton,             "viewConfigurationTip"), bottomButtonConstraints);
+        processPanel     .add(tip(saveButton,             "saveConfigurationTip"), bottomButtonConstraints);
+        processPanel     .add(tip(processButton,          "processTip"),           lastBottomButtonConstraints);
 
-        reTracePanel         .add(Box.createGlue(),                                      glueConstraints);
-        reTracePanel         .add(tip(loadStackTraceButton,   "loadStackTraceTip"),      bottomButtonConstraints);
-        reTracePanel         .add(tip(reTraceButton,          "reTraceTip"),             lastBottomButtonConstraints);
+        reTracePanel     .add(Box.createGlue(),                                    glueConstraints);
+        reTracePanel     .add(tip(loadStackTraceButton,   "loadStackTraceTip"),    bottomButtonConstraints);
+        reTracePanel     .add(tip(reTraceButton,          "reTraceTip"),           lastBottomButtonConstraints);
 
         // Add the main tabs to the frame.
         getContentPane().add(tabs);
@@ -661,6 +678,36 @@ public class ProGuardGUI extends JFrame
         // Initialize the GUI settings to reasonable defaults.
         loadConfiguration(this.getClass().getResource(DEFAULT_CONFIGURATION));
     }
+
+
+    private void createLogAppender(JTextArea consoleTextArea)
+    {
+        LoggerContext ctx = (LoggerContext) LogManager.getContext(false);
+        org.apache.logging.log4j.core.config.Configuration config = ctx.getConfiguration();
+        OutputStreamAppender writerAppender = OutputStreamAppender
+                .newBuilder()
+                .setName("writeLogger")
+                .setTarget(new PrintStream(new TextAreaOutputStream(consoleTextArea), true))
+                .setLayout(PatternLayout.newBuilder().withPattern("%msg%n").build())
+                        .build();
+
+        writerAppender.start();
+        config.getRootLogger().removeAppender("Console");
+        config.addAppender(writerAppender);
+        LoggerConfig loggerConfig = config.getLoggerConfig("TextAreaLogger") ;
+        loggerConfig.addAppender(writerAppender, null, null);
+
+        addWindowListener(new WindowAdapter()
+        {
+            @Override
+            public void windowClosing(WindowEvent e)
+            {
+                LoggerContext.getContext(false).stop();
+                e.getWindow().dispose();
+            }
+        });
+    }
+
 
     public void startSplash()
     {
@@ -683,14 +730,12 @@ public class ProGuardGUI extends JFrame
         try
         {
             // Parse the boilerplate configuration file.
-            ConfigurationParser parser = new ConfigurationParser(
+            try (ConfigurationParser parser = new ConfigurationParser(
                 this.getClass().getResource(BOILERPLATE_CONFIGURATION),
-                System.getProperties());
-
-            Configuration configuration = new Configuration();
-
-            try
+                System.getProperties()))
             {
+                Configuration configuration = new Configuration();
+
                 parser.parse(configuration);
 
                 // We're interested in the keep options.
@@ -705,16 +750,13 @@ public class ProGuardGUI extends JFrame
                 boilerplateNoSideEffectMethods = new ClassSpecification[configuration.assumeNoSideEffects.size()];
                 configuration.assumeNoSideEffects.toArray(boilerplateNoSideEffectMethods);
             }
-            finally
-            {
-                parser.close();
-            }
         }
         catch (Exception ex)
         {
             ex.printStackTrace();
         }
     }
+
 
     /**
      * Returns an array containing the ClassSpecifications instances with
@@ -726,30 +768,14 @@ public class ProGuardGUI extends JFrame
     {
         List matches = new ArrayList();
 
-	boolean matched = false;
-
         for (int index = 0; index < keepSpecifications.size(); index++)
         {
             KeepClassSpecification keepClassSpecification = (KeepClassSpecification)keepSpecifications.get(index);
-
-	        if (keepClassSpecification.comments == null && matched)
-	        {
-		        matches.add(keepClassSpecification);
-	        }
-	        else if (keepClassSpecification.comments != null)
-	        {
-
-	            if ((keepClassSpecification.allowShrinking == allowShrinking &&
-		             keepClassSpecification.allowObfuscation == allowObfuscation))
-	            {
-                    matches.add(keepClassSpecification);
-		            matched = true;
-	            }
-		        else
-		        {
-		            matched = false;
-		        }
-	        }
+            if (keepClassSpecification.allowShrinking   == allowShrinking &&
+                keepClassSpecification.allowObfuscation == allowObfuscation)
+            {
+                 matches.add(keepClassSpecification);
+            }
         }
 
         KeepClassSpecification[] matchingKeepClassSpecifications = new KeepClassSpecification[matches.size()];
@@ -757,6 +783,7 @@ public class ProGuardGUI extends JFrame
 
         return matchingKeepClassSpecifications;
     }
+
 
     /**
      * Returns an array containing the ClassSpecification instances of the
@@ -779,11 +806,9 @@ public class ProGuardGUI extends JFrame
      * Creates a panel with the given boiler plate class specifications.
      */
     private void addClassSpecifications(ClassSpecification[] boilerplateClassSpecifications,
-                                        JPanel               classSpecificationsPanel,
                                         JCheckBox[]          boilerplateCheckBoxes,
                                         JTextField[]         boilerplateTextFields,
-					                    JCheckBox 	         previousBox,
-					                    JTextField	         previousField)
+                                        JPanel               classSpecificationsPanel)
     {
         // Create some constraints that can be reused.
         GridBagConstraints constraints = new GridBagConstraints();
@@ -804,167 +829,110 @@ public class ProGuardGUI extends JFrame
         panelConstraints.anchor    = GridBagConstraints.NORTHWEST;
         panelConstraints.insets    = constraints.insets;
 
+        GridBagConstraints containerConstraints = new GridBagConstraints();
+        containerConstraints.gridwidth = GridBagConstraints.REMAINDER;
+        containerConstraints.fill      = GridBagConstraints.BOTH;
+        containerConstraints.weightx   = 1.0;
+        containerConstraints.weighty   = 1.0;
+        containerConstraints.anchor    = GridBagConstraints.NORTHWEST;
+
         GridBagLayout layout = new GridBagLayout();
 
+        JPanel panel = new JPanel(layout);
 
         String lastPanelName = null;
-        JPanel keepSubpanel  = null;
-        boolean commentHasTextField = false;
+        JPanel subpanel  = null;
         for (int index = 0; index < boilerplateClassSpecifications.length; index++)
         {
-
             // The panel structure is derived from the comments.
-            String comments    = boilerplateClassSpecifications[index].comments;
-	        String className   = boilerplateClassSpecifications[index].className;
+            String comments = boilerplateClassSpecifications[index].comments;
 
-	        if (comments != null)
-	        {
-	            // Add an empty space if no text field is needed
-	            if (!commentHasTextField && index != 0)
-	            {
-                    JLabel l = new JLabel("");
-                    keepSubpanel.add(tip(l, "classNamesTip"), constraintsLastStretch);
+            // Do we have a comment, for a new set of options?
+            if (comments != null)
+            {
+                // Create a new line in the panel.
+                int    dashIndex   = comments.indexOf('-');
+                int    periodIndex = comments.indexOf('.', dashIndex);
+                String panelName   = comments.substring(0, dashIndex).trim();
+                String optionName  = comments.substring(dashIndex + 1, periodIndex).replace('_', '.').trim();
+                String toolTip     = comments.substring(periodIndex + 1);
+                if (!panelName.equals(lastPanelName))
+                {
+                    // Create a new subpanel and add it.
+                    subpanel = new JPanel(layout);
+                    if (panelName.endsWith(ELLIPSIS_DOTS))
+                    {
+                        subpanel.setVisible(false);
+                    }
+
+                    // Make the contents foldable.
+                    final JPanel       foldableSubpanel = new JPanel(layout);
+                    final TitledBorder titledBorder         = BorderFactory.createTitledBorder(BORDER, panelName);
+                    foldableSubpanel.setBorder(titledBorder);
+                    foldableSubpanel.add(subpanel, containerConstraints);
+
+                    // Fold and unfold the contents when the foldable panel
+                    // is clicked.
+                    final JPanel finalSubpanel = subpanel;
+                    foldableSubpanel.addMouseListener(new MouseAdapter()
+                    {
+                        public void mouseClicked(MouseEvent mouseEvent)
+                        {
+                            // Toggle the visibility and the title.
+                            String title = titledBorder.getTitle();
+                            if (finalSubpanel.isVisible())
+                            {
+                                finalSubpanel.setVisible(false);
+                                titledBorder.setTitle(title + ELLIPSIS_DOTS);
+                            }
+                            else
+                            {
+                                finalSubpanel.setVisible(true);
+                                titledBorder.setTitle(title.substring(0, title.length()-3));
+                            }
+                        }
+                    });
+
+                    classSpecificationsPanel.add(foldableSubpanel, panelConstraints);
+
+                    lastPanelName = panelName;
                 }
 
-            	int    dashIndex    = comments.indexOf('-');
-            	int    periodIndex  = comments.indexOf('.', dashIndex);
-                commentHasTextField = false;
-
-                final String panelName   = comments.substring(0, dashIndex).trim();
-            	String optionName        = comments.substring(dashIndex + 1, periodIndex).replace('_', '.').trim();
-            	String toolTip           = comments.substring(periodIndex + 1);
-
-            	if (keepSubpanel == null || !panelName.equals(lastPanelName))
-            	{
-                	// Create a new foldable keep subpanel and add it.
-                    final JPanel tempKeepSubpanel = new JPanel(layout);
-                    tempKeepSubpanel.setBorder(BorderFactory.createTitledBorder(panelName));
-
-                    final JPanel foldedKeepSubpanel = new JPanel(layout);
-                    foldedKeepSubpanel.setBorder(BorderFactory.createTitledBorder(panelName + "..."));
-
-                    foldedKeepSubpanel.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-                    foldedKeepSubpanel.addMouseListener(new MouseAdapter() {
-                        public void mouseClicked(MouseEvent mouseEvent) {
-                            foldedKeepSubpanel.setVisible(false);
-                            tempKeepSubpanel.setVisible(true);
-                        }
-                    });
-
-                    tempKeepSubpanel.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-                    tempKeepSubpanel.addMouseListener(new MouseAdapter() {
-                        public void mouseClicked(MouseEvent mouseEvent) {
-                            foldedKeepSubpanel.setVisible(true);
-                            tempKeepSubpanel.setVisible(false);
-                        }
-                    });
-
-                    if (!panelName.equals("Keep")    &&
-                        !panelName.equals("Android") &&
-                        !panelName.contains("Remove"))
-                    {
-                        tempKeepSubpanel.setVisible(false);
-                        foldedKeepSubpanel.setVisible(true);
-                    }
-                    else
-                    {
-                        tempKeepSubpanel.setVisible(true);
-                        foldedKeepSubpanel.setVisible(false);
-                    }
-
-                    keepSubpanel = tempKeepSubpanel;
-
-                    classSpecificationsPanel.add(foldedKeepSubpanel, panelConstraints);
-                	classSpecificationsPanel.add(keepSubpanel, panelConstraints);
-
-                	lastPanelName = panelName;
-            	}
-
-            	// Add a check box to each option with comments
+                // Should we add a text field for the class names?
+                boolean addTextField =
+                    boilerplateTextFields != null                              &&
+                    (index+1 == boilerplateClassSpecifications.length ||
+                     boilerplateClassSpecifications[index+1].comments != null) &&
+                    boilerplateClassSpecifications[index].className == null;
+;
+                // Add the check box to the subpanel.
                 JCheckBox boilerplateCheckBox = new JCheckBox(optionName);
                 boilerplateCheckBox.setToolTipText(toolTip);
-                boilerplateCheckBoxes[index] = boilerplateCheckBox;
-                previousBox = boilerplateCheckBox;
-                keepSubpanel.add(boilerplateCheckBox,
-                                 boilerplateTextFields != null ?
+                subpanel.add(boilerplateCheckBox,
+                             addTextField ?
                                  constraints :
                                  constraintsLastStretch);
 
-                // Add a text field if necessary to each option with comments
-            	if (boilerplateTextFields != null)
-            	{
-			        if (className == null || needsTextField(className))
-			        {
-                        boilerplateTextFields[index] = new JTextField(40);
-                        previousField = boilerplateTextFields[index];
-              			keepSubpanel.add(tip(boilerplateTextFields[index], "classNamesTip"), constraintsLastStretch);
-                        commentHasTextField = true;
-			        }
-                    else
-                    {
-                        boilerplateTextFields[index] = new JTextField(40);
-                        boilerplateTextFields[index].setText(className);
-                        if (!commentHasTextField && index == boilerplateClassSpecifications.length-1)
-                        {
+                boilerplateCheckBoxes[index] = boilerplateCheckBox;
 
-                            JLabel l = new JLabel("");
-
-                            keepSubpanel.add(tip(l, "classNamesTip"), constraintsLastStretch);
-                        }
-                    }
-            	}
-
-	        }
-
-	        else {
-	            // Match check boxes and text fields with those that belong to the respective comments
-                boilerplateCheckBoxes[index] = previousBox;
-
-                if (boilerplateTextFields != null)
+                // Add the text field to the subpanel, if relevant.
+                if (addTextField)
                 {
-                    if (className == null || needsTextField(className))
-                    {
-                        if (!commentHasTextField)
-                        {
-                            boilerplateTextFields[index] = new JTextField(40);
-                            previousField = boilerplateTextFields[index];
-                            keepSubpanel.add(tip(boilerplateTextFields[index], "classNamesTip"), constraintsLastStretch);
-                            commentHasTextField = true;
-                        }
-                        else
-                        {
-                            boilerplateTextFields[index] = previousField;
-                        }
-                    }
-                    else
-                    {
-                        boilerplateTextFields[index] = new JTextField(40);
-                        boilerplateTextFields[index].setText(className);
-                    }
+                    JTextField boilerplateTextField = new JTextField(40);
+                    subpanel.add(tip(boilerplateTextField, "classNamesTip"), constraintsLastStretch);
+
+                    boilerplateTextFields[index] = boilerplateTextField;
                 }
-	        }
+            }
+            else
+            {
+                // Reuse the previous line from the panel, notably the check
+                // box.
+                boilerplateCheckBoxes[index] = boilerplateCheckBoxes[index-1];
+            }
         }
     }
 
-    private boolean needsTextField(String string) {
-
-        if (!string.contains("*")) {
-            return false;
-        }
-
-        if (string.contains("*") && !string.contains("**")) {
-            return true;
-        }
-
-        int indexSingleAsterisk = string.lastIndexOf("*");
-        int indexDoubleAsterisk = string.indexOf("**");
-
-        if (indexDoubleAsterisk+1 != indexSingleAsterisk) {
-                return true;
-        }
-
-        return false;
-    }
 
     /**
      * Adds a standard border with the title that corresponds to the given key
@@ -1028,6 +996,8 @@ public class ProGuardGUI extends JFrame
         {
             public void actionPerformed(ActionEvent e)
             {
+                fileChooser.setCurrentDirectory(new File(PREFS.get("LAST_MAPPING_FILE", new File(".").getAbsolutePath())));
+
                 // Update the file chooser.
                 fileChooser.setDialogTitle(title);
                 fileChooser.setSelectedFile(new File(textField.getText()));
@@ -1037,6 +1007,8 @@ public class ProGuardGUI extends JFrame
                 {
                     // Update the text field.
                     textField.setText(fileChooser.getSelectedFile().getPath());
+                    // Save the last opened folder for the next usage of this panel (it's kept even on app restarts)
+                    PREFS.put("LAST_MAPPING_FILE", fileChooser.getSelectedFile().getAbsolutePath());
                 }
             }
         });
@@ -1110,14 +1082,14 @@ public class ProGuardGUI extends JFrame
         // Set up the boilerplate keep options.
         for (int index = 0; index < boilerplateKeep.length; index++)
         {
-
             String classNames =
                 findMatchingKeepSpecifications(boilerplateKeep[index],
+                                               boilerplateKeepTextFields[index] == null,
                                                configuration.keep);
 
             boilerplateKeepCheckBoxes[index].setSelected(classNames != null);
-
-            if (boilerplateKeepTextFields != null) {
+            if (boilerplateKeepTextFields[index] != null)
+            {
                 boilerplateKeepTextFields[index].setText(classNames == null ? "*" : classNames);
             }
         }
@@ -1128,10 +1100,12 @@ public class ProGuardGUI extends JFrame
         {
             String classNames =
                 findMatchingKeepSpecifications(boilerplateKeepNames[index],
+                                               boilerplateKeepNamesTextFields[index] == null,
                                                configuration.keep);
 
             boilerplateKeepNamesCheckBoxes[index].setSelected(classNames != null);
-            if (boilerplateKeepNamesTextFields != null) {
+            if (boilerplateKeepNamesTextFields[index] != null)
+            {
                 boilerplateKeepNamesTextFields[index].setText(classNames == null ? "*" : classNames);
             }
         }
@@ -1171,7 +1145,7 @@ public class ProGuardGUI extends JFrame
         optimizeCheckBox                        .setSelected(configuration.optimize);
         allowAccessModificationCheckBox         .setSelected(configuration.allowAccessModification);
         mergeInterfacesAggressivelyCheckBox     .setSelected(configuration.mergeInterfacesAggressively);
-        optimizationPassesSpinner.getModel()    .setValue(new Integer(configuration.optimizationPasses));
+        optimizationPassesSpinner.getModel()    .setValue(configuration.optimizationPasses);
 
         obfuscateCheckBox                       .setSelected(configuration.obfuscate);
         printMappingCheckBox                    .setSelected(configuration.printMapping                  != null);
@@ -1244,22 +1218,10 @@ public class ProGuardGUI extends JFrame
         {
             reTraceMappingTextField.setText(fileName(configuration.printMapping));
         }
-    }
-
-    /**
-     * Returns the given string in which the asterisks are replaced by the given string 'text'.
-     */
-    private String replaceAsteriskByText(String string, String text) {
-
-        int indexOfSingleAsterisk = string.lastIndexOf("*");
-        int indexOfDoubleAsterisk = string.indexOf("**");
-        if (indexOfSingleAsterisk != indexOfDoubleAsterisk+1 && indexOfSingleAsterisk != -1) {
-            string = string.substring(0,indexOfSingleAsterisk)
-                    + text
-                    + string.substring(indexOfSingleAsterisk+1,string.length());
+        else
+        {
+            reTraceMappingTextField.setText(PREFS.get("LAST_MAPPING_FILE", ""));
         }
-
-        return string;
     }
 
 
@@ -1295,31 +1257,9 @@ public class ProGuardGUI extends JFrame
         {
             if (boilerplateKeepCheckBoxes[index].isSelected())
             {
-                String className = boilerplateKeep[index].className;
-                String text = boilerplateKeepTextFields[index].getText();
-
-                if (className != null)
-                {
-                    boolean containsAsterisk = className.contains("*");
-
-                    if(!containsAsterisk)
-                    {
-                        keep.add(classSpecification(boilerplateKeep[index], className));
-                    }
-                    else
-                    {
-                        className = replaceAsteriskByText(className,text);
-                        keep.add(classSpecification(boilerplateKeep[index], className));
-                    }
-
-                }
-                else
-                {
-                    keep.add(classSpecification(boilerplateKeep[index],text));
-                }
-//                keep.add(classSpecification(boilerplateKeep[index],
-//                        boilerplateKeepTextFields[index].getText()));
-
+                keep.add(classSpecification(boilerplateKeep[index],
+                                            boilerplateKeepTextFields[index] == null ? null :
+                                            boilerplateKeepTextFields[index].getText()));
             }
         }
 
@@ -1328,17 +1268,9 @@ public class ProGuardGUI extends JFrame
         {
             if (boilerplateKeepNamesCheckBoxes[index].isSelected())
             {
-                if (boilerplateKeep[index].className != null)
-                {
-                    keep.add(classSpecification(boilerplateKeepNames[index], boilerplateKeepNames[index].className));
-                }
-                else
-                {
-                    keep.add(classSpecification(boilerplateKeepNames[index],
-                            boilerplateKeepNamesTextFields[index].getText()));
-                }
-//                keep.add(classSpecification(boilerplateKeepNames[index],
-//                            boilerplateKeepNamesTextFields[index].getText()));
+                keep.add(classSpecification(boilerplateKeepNames[index],
+                                            boilerplateKeepNamesTextFields[index] == null ? null :
+                                            boilerplateKeepNamesTextFields[index].getText()));
             }
         }
 
@@ -1391,9 +1323,9 @@ public class ProGuardGUI extends JFrame
         configuration.obfuscate                        = obfuscateCheckBox                       .isSelected();
         configuration.printMapping                     = printMappingCheckBox                    .isSelected() ? new File(printMappingTextField                                       .getText()) : null;
         configuration.applyMapping                     = applyMappingCheckBox                    .isSelected() ? new File(applyMappingTextField                                       .getText()) : null;
-        configuration.obfuscationDictionary            = obfuscationDictionaryCheckBox           .isSelected() ? url(obfuscationDictionaryTextField.getText()) : null;
-        configuration.classObfuscationDictionary       = classObfuscationDictionaryCheckBox      .isSelected() ? url(classObfuscationDictionaryTextField.getText()) : null;
-        configuration.packageObfuscationDictionary     = packageObfuscationDictionaryCheckBox    .isSelected() ? url(packageObfuscationDictionaryTextField.getText()) : null;
+        configuration.obfuscationDictionary            = obfuscationDictionaryCheckBox           .isSelected() ? url(obfuscationDictionaryTextField                                   .getText()) : null;
+        configuration.classObfuscationDictionary       = classObfuscationDictionaryCheckBox      .isSelected() ? url(classObfuscationDictionaryTextField                              .getText()) : null;
+        configuration.packageObfuscationDictionary     = packageObfuscationDictionaryCheckBox    .isSelected() ? url(packageObfuscationDictionaryTextField                            .getText()) : null;
         configuration.overloadAggressively             = overloadAggressivelyCheckBox            .isSelected();
         configuration.useUniqueClassMemberNames        = useUniqueClassMemberNamesCheckBox       .isSelected();
         configuration.useMixedCaseClassNames           = useMixedCaseClassNamesCheckBox          .isSelected();
@@ -1486,7 +1418,8 @@ public class ProGuardGUI extends JFrame
      * specifications as a side effect.
      */
     private String findMatchingKeepSpecifications(KeepClassSpecification keepClassSpecificationTemplate,
-                                                  List              keepSpecifications)
+                                                  boolean                matchName,
+                                                  List                   keepSpecifications)
     {
         if (keepSpecifications == null)
         {
@@ -1499,7 +1432,13 @@ public class ProGuardGUI extends JFrame
         {
             KeepClassSpecification listedKeepClassSpecification =
                 (KeepClassSpecification)keepSpecifications.get(index);
+
+            // Should we match the original template class name?
             String className = listedKeepClassSpecification.className;
+            if (!matchName)
+            {
+                keepClassSpecificationTemplate.className = className;
+            }
 
             if (keepClassSpecificationTemplate.equals(listedKeepClassSpecification))
             {
@@ -1511,11 +1450,6 @@ public class ProGuardGUI extends JFrame
                 {
                     buffer.append(',');
                 }
-
-                if (className != null) {
-                    System.out.println("ClassUtil.externalClassName(className) = " + ClassUtil.externalClassName(className));
-                }
-
                 buffer.append(className == null ? "*" : ClassUtil.externalClassName(className));
 
                 // Remove the matching option as a side effect.
@@ -1525,6 +1459,7 @@ public class ProGuardGUI extends JFrame
 
         return buffer == null ? null : buffer.toString();
     }
+
 
     /**
      * Returns a class specification or keep specification, based on the given
@@ -1537,13 +1472,9 @@ public class ProGuardGUI extends JFrame
         ClassSpecification classSpecification =
             (ClassSpecification)classSpecificationTemplate.clone();
 
-        if (className == null)
+        // Set the class name in the copy.
+        if (className != null)
         {
-            classSpecification.className = null;
-        }
-        else
-        {
-            // Set the class name in the copy.
             classSpecification.className =
                 className.equals("") ||
                 className.equals("*") ?
@@ -1570,13 +1501,11 @@ public class ProGuardGUI extends JFrame
         try
         {
             // Parse the configuration file.
-            ConfigurationParser parser = new ConfigurationParser(file,
-                                                                 System.getProperties());
-
-            Configuration configuration = new Configuration();
-
-            try
+            try (ConfigurationParser parser = new ConfigurationParser(file,
+                                                                      System.getProperties()))
             {
+                Configuration configuration = new Configuration();
+
                 parser.parse(configuration);
 
                 // Let the GUI reflect the configuration.
@@ -1588,10 +1517,6 @@ public class ProGuardGUI extends JFrame
                                               msg("cantParseConfigurationFile", file.getPath()),
                                               msg("warning"),
                                               JOptionPane.ERROR_MESSAGE);
-            }
-            finally
-            {
-                parser.close();
             }
         }
         catch (IOException ex)
@@ -1612,14 +1537,22 @@ public class ProGuardGUI extends JFrame
         try
         {
             // Parse the configuration file.
-            ConfigurationParser parser = new ConfigurationParser(url,
-                                                                 System.getProperties());
-
-            Configuration configuration = new Configuration();
-
-            try
+            try (ConfigurationParser parser = new ConfigurationParser(url,
+                                                                      System.getProperties()))
             {
+                Configuration configuration = new Configuration();
+
                 parser.parse(configuration);
+
+                configuration.libraryJars = new ClassPath();
+
+                if (JavaUtil.currentJavaVersion() > 8) {
+                    configuration.libraryJars.add(
+                            new ClassPathEntry(JavaUtil.getJmodBase(), false));
+                } else {
+                    configuration.libraryJars.add(
+                            new ClassPathEntry(JavaUtil.getRtJar(), false));
+                }
 
                 // Let the GUI reflect the configuration.
                 setProGuardConfiguration(configuration);
@@ -1630,10 +1563,6 @@ public class ProGuardGUI extends JFrame
                                               msg("cantParseConfigurationFile", url),
                                               msg("warning"),
                                               JOptionPane.ERROR_MESSAGE);
-            }
-            finally
-            {
-                parser.close();
             }
         }
         catch (IOException ex)
@@ -1654,15 +1583,10 @@ public class ProGuardGUI extends JFrame
         try
         {
             // Save the configuration file.
-            ConfigurationWriter writer = new ConfigurationWriter(file);
-
-            try
+            Configuration configuration = getProGuardConfiguration();
+            try (ConfigurationWriter writer = new ConfigurationWriter(file))
             {
-                writer.write(getProGuardConfiguration());
-            }
-            finally
-            {
-                writer.close();
+                writer.write(configuration);
             }
         }
         catch (Exception ex)
@@ -1780,16 +1704,11 @@ public class ProGuardGUI extends JFrame
                     // TODO: write out relative path names and path names with system properties.
 
                     // Write the configuration.
-                    ConfigurationWriter configurationWriter =
-                        new ConfigurationWriter(printWriter);
-
-                    try
+                    Configuration configuration = getProGuardConfiguration();
+                    try (ConfigurationWriter configurationWriter =
+                                 new ConfigurationWriter(printWriter))
                     {
-                        configurationWriter.write(getProGuardConfiguration());
-                    }
-                    finally
-                    {
-                        configurationWriter.close();
+                        configurationWriter.write(configuration);
                     }
                 }
                 catch (IOException ignore)
@@ -1867,11 +1786,9 @@ public class ProGuardGUI extends JFrame
             if (!systemOutRedirected)
             {
                 systemOutRedirected = true;
-
                 boolean verbose            = reTraceVerboseCheckBox.isSelected();
                 File    retraceMappingFile = new File(reTraceMappingTextField.getText());
                 String  stackTrace         = stackTraceTextArea.getText();
-
                 // Create the ReTrace runnable.
                 Runnable reTraceRunnable = new ReTraceRunnable(reTraceTextArea,
                                                                verbose,
@@ -1880,6 +1797,7 @@ public class ProGuardGUI extends JFrame
 
                 // Run it in this thread, because it won't take long anyway.
                 reTraceRunnable.run();
+                systemOutRedirected = false;
             }
         }
     }
@@ -1900,7 +1818,7 @@ public class ProGuardGUI extends JFrame
         {
             try
             {
-                return new URL("file", "", 0, "");
+                return new File(path).toURI().toURL();
             }
             catch (MalformedURLException e1)
             {
@@ -2021,8 +1939,28 @@ public class ProGuardGUI extends JFrame
 
                         Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();
                         Dimension guiSize    = gui.getSize();
-                        gui.setLocation((screenSize.width - guiSize.width)   / 2,
-                                        (screenSize.height - guiSize.height) / 2);
+                        gui.setSize(
+                                new Dimension(
+                                        PREFS.getInt("width", gui.getWidth()),
+                                        PREFS.getInt("height", gui.getHeight())
+                                )
+                        );
+
+                        gui.setLocation(new Point(
+                                PREFS.getInt("x", (screenSize.width - guiSize.width) / 2),
+                                PREFS.getInt("y", (screenSize.height - guiSize.height) / 2)
+                        ));
+
+                        gui.addWindowListener(new WindowAdapter() {
+                            public void windowClosing(WindowEvent e) {
+                                PREFS.putInt("width", gui.getWidth());
+                                PREFS.putInt("height", gui.getHeight());
+
+                                PREFS.putInt("x", gui.getLocation().x);
+                                PREFS.putInt("y", gui.getLocation().y);
+                            }
+                        });
+
                         gui.show();
 
                         // Start the splash animation, unless specified otherwise.
@@ -2037,6 +1975,7 @@ public class ProGuardGUI extends JFrame
                         {
                             gui.startSplash();
                         }
+
                         // Load an initial configuration, if specified.
                         if (argIndex < args.length)
                         {
@@ -2052,7 +1991,7 @@ public class ProGuardGUI extends JFrame
                     catch (Exception e)
                     {
                         System.out.println("Internal problem starting the ProGuard GUI (" + e.getMessage() + ")");
- e.printStackTrace();
+                        e.printStackTrace();
                     }
                 }
             });
@@ -2060,7 +1999,7 @@ public class ProGuardGUI extends JFrame
         catch (Exception e)
         {
             System.out.println("Internal problem starting the ProGuard GUI (" + e.getMessage() + ")");
- e.printStackTrace();
+            e.printStackTrace();
         }
     }
 }
